--- a/src/app/components/add-new-list/add-new-list.component.scss
+++ b/src/app/components/add-new-list/add-new-list.component.scss
@@ -75,7 +75,7 @@ body {background: #f69a73;}
   margin-top: 30px;
   background: #f69a73;
   border-bottom: 4px solid #d87d56;
-  color: white;
+  color: #fff;
   font-size: 14px;
 }
 .form-inner textarea {resize: none;}
